infrastructure/controllers/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
